# template-axum-malina

./: .gitignore  Cargo.toml  README.md  home.html
src/: main.rs
utils/: App.xht  rollup.config.js  where_npm.js  where_npx.js
